--- a/project/client/interface/PartyTime/static.qrc
+++ b/project/client/interface/PartyTime/static.qrc
@@ -3,6 +3,7 @@
         <file>kingKong.png</file>
         <file>circleLoader.gif</file>
         <file>squaresLoader.gif</file>
+        <file>tyanochka.png</file>
     </qresource>
     <qresource prefix="/css">
         <file>style.css</file>
