registration, auth, navbar, uiButton class was implemented

--- a/project/client/interface/PartyTime/static.qrc
+++ b/project/client/interface/PartyTime/static.qrc
@@ -4,6 +4,7 @@
         <file>circleLoader.gif</file>
         <file>squaresLoader.gif</file>
         <file>tyanochka.png</file>
+        <file>MainLayout.png</file>
     </qresource>
     <qresource prefix="/css">
         <file>style.css</file>
