--- a/project/client/interface/PartyTime/style.css
+++ b/project/client/interface/PartyTime/style.css
@@ -1,3 +1,14 @@
+
+/*General widgets styles*/
+QStackedWidget#generalBackground {
+    border-image: url(:/image/MainLayout.png) 0 0 0 0 stretch stretch;
+/*    padding-top: 20px;*/
+    padding-bottom: 20px;
+    min-width: 1440px;
+    max-height: 1024px;
+}
+
+/*Text fiels*/
 QLineEdit {
     min-width: 200px;
     min-height: 40px;
@@ -9,6 +20,7 @@ QLineEdit {
     text-align: center;
 }
 
+/* Buttons*/
 QPushButton {
     min-width: 200px;
     min-height: 40px;
@@ -23,6 +35,7 @@ QPushButton:hover {
     color: #fff;
 }
 
+/*Pages Buttons*/
 QPushButton#enterButton {
     font-size: 20px;
     margin-bottom: 10px;
@@ -55,3 +68,36 @@ QPushButton#backButton:hover {
     color: #fff;
 }
 
+/*Navbar Button*/
+QPushButton#mainBtn {
+    background-color: rgba(47, 5, 72, 1);
+    max-width: 150px;
+    max-height: 50px;
+}
+
+QPushButton#profileBtn {
+    background-color: rgba(47, 5, 72, 1);
+    max-width: 150px;
+    max-height: 50px;
+}
+
+QPushButton#eventsBtn {
+    background-color: rgba(47, 5, 72, 1);
+    max-width: 150px;
+    max-height: 50px;
+}
+
+/*Components styles*/
+*[cssClass~="clientNavbar"] {
+    min-height: 100%;
+    background-color: rgba(25, 113, 125, 0.599);
+    border: 1px solid rgba(23, 7, 57, 1);
+    border-radius: 15px;
+}
+
+*[cssClass~="organizerNavbar"] {
+    min-height: 100%;
+    background-color: rgba(25, 113, 125, 0.599);
+    border: 1px solid rgba(23, 7, 57, 1);
+    border-radius: 15px;
+}
