almost ready to review

--- a/project/client/PartyTime/style.css
+++ b/project/client/PartyTime/style.css
@@ -45,6 +45,10 @@ QPushButton#enterButton:hover {
 /*    font-weight: 600px;*/
 }
 
+registration#registration {
+    max-height: 900px;
+}
+
 QPushButton#registrationButton {
     font-size: 20px;
 }
