Profile page done

--- a/project/client/PartyTime/static.qrc
+++ b/project/client/PartyTime/static.qrc
@@ -21,6 +21,7 @@
         <file>back-arrow.png</file>
         <file>gearBlack.svg</file>
         <file>gearWhite.svg</file>
+        <file>arrow-down.png</file>
     </qresource>
     <qresource prefix="/css">
         <file>style.css</file>
