--- a/project/client/PartyTime/style.css
+++ b/project/client/PartyTime/style.css
@@ -385,6 +385,16 @@ QComboBox:!on {
     background-color: transparent;
 }
 
+*[cssClass~="createFormInput"] {
+    min-width: 200px;
+    min-height: 50px;
+    color: #000000;
+    font-size: 28px;
+    font-weight: 800;
+    padding-top: 10px;
+    background-color: transparent;
+}
+
 *[cssClassEdit~="settingsInput"] {
     min-width: 350px;
     min-height: 50px;
@@ -400,6 +410,16 @@ QComboBox:!on {
     background-color: #000000;
     border-radius: 15px;
     border: 1px solid black;
+}
+
+
+*[cssClassEdit~="createFormInput"] {
+    min-width: 350px;
+    min-height: 50px;
+    background-color: #000000;
+    border-radius: 15px;
+    border: 1px solid black;
+    border-image: url() 50 50;
 }
 
 QDateEdit
