new picture was added

--- a/project/client/PartyTime/static.qrc
+++ b/project/client/PartyTime/static.qrc
@@ -25,6 +25,7 @@
         <file>event2.jpg</file>
         <file>event3.jpg</file>
         <file>Event4.jpg</file>
+        <file>newAddButton.png</file>
     </qresource>
     <qresource prefix="/css">
         <file>style.css</file>
