--- a/project/client/PartyTime/style.css
+++ b/project/client/PartyTime/style.css
@@ -35,6 +35,18 @@ QLineEdit {
     text-align: center;
 }
 
+QDateEdit#regBirthDate {
+    min-width: 200px;
+    min-height: 40px;
+    padding: 5px 0px 5px 0px;
+    font-size: 16px;
+    border: 2px solid purple;
+    border-radius: 15px;
+    background-color: rgba(152, 128, 203, 1);
+    text-align: center;
+    padding-left: 10px;
+}
+
 *[cssClass~="createFormInput"] {
     min-width: 200px;
     min-height: 40px;
